# Numera_frontend_flet

./: README.md  pyproject.toml  todo_backend.txt
src/: main.py  requirements.txt
src/components/common/: forms.py
src/config/: constants.py  settings.py
src/core/: exceptions.py  navigation.py  router.py  session_manager.py
src/models/: accounting_docs.py  auth.py  base.py  common.py  economic.py  event.py  invoice.py  organization.py  role.py  user.py
src/services/: accounting_docs_service.py  api_client.py  auth_service.py  economic_service.py  event_service.py  home_service.py  invoice_service.py  organization_service.py  permission_service.py  role_service.py  service_container.py  user_service.py
src/utils/: helpers.py  validators.py
src/views/auth/: login_view.py
src/views/base/: base_view.py  mixins.py
src/views/economy/: economy_dashboard.py  movement_create.py  movement_detail.py  movements_list.py
src/views/event/: event_detail.py  event_form.py  events_list.py
src/views/main/: home_view.py  profile_view.py
src/views/organization/: organization_detail.py  organization_form.py  organization_list.py
src/views/users/: user_detail.py  user_form.py  users_list.py
