[project]
name = "SatanicApp"
version = "0.2.0"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Pau Tarraga", email = "ptarraga2000@gmail.com" }
]
dependencies = [
  "flet==0.28.3",
  "httpx==0.28.1",
  "PyJWT==2.10.1",
  "PyJWT==2.10.1",
  "pydantic==2.11.9",
  "pydantic_settings==2.10.1"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.SatanicApp"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "SatanicApp"

# company name to display in about app dialogs
company = "SatanicApp"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by SatanicApp"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}